src/objects/Onboarding__c.object
<CustomObject>
    <description>Steps for Project Onboarding</description>
    <fields>
        <fullName>Business_Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the master business solution</description>
        <label>Business Solution</label>
        <referenceTo>Business_Solution__c</referenceTo>
        <relationshipName>Onboardings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date Step was completed</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Date when the step is due to be completed</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Record more information about the onboarding steps if required</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Step__c</fullName>
        <description>Onboarding Steps</description>
        <label>Onboarding Step</label>
        <picklist>
            <picklistValues>
                <fullName>Raise Clarity Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citicus Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Security Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Design Document (attached?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Support Level 2 and Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Change and Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA (attached?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help file (attached?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate support Assignment Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Go Live request for change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Impact Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Asset Management / License Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servie Request Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Remedy Group Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Remedy Group Change Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to chatter group: Application Developments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to chatter group: DevOpts Tooling Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to chatter group: Release Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of on-boarding step</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Onboarding Step</label>
    <nameField>
        <displayFormat>ON-{000000}</displayFormat>
        <label>Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>